--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- Google Fonts Manrope -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <title>Tea House</title>
     <!-- Tailwind & Daisy UI CDN Links -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
@@ -18,7 +19,10 @@
             theme: {
                 extend: {
                     colors: {
-                        banner: '',
+                       dark1: '#1C1C1C',
+                       dark3: '#777777',
+                       'gradient-start': '#FF8938',
+                       'gradient-end': '#f00',
                     }
                 }
             }
@@ -33,9 +37,59 @@
 </head>
 
 <body class="font-manrope">
-    <header></header>
+    <!-- Banner Section -->
+    <header class="mb-32 max-w-[1140px] mx-auto pt-[70px]">
+        <div class="flex flex-col gap-0 lg:gap-3 lg:flex-row justify-between items-center px-4 lg:px-0">
+            <div class="space-y-8 flex-1">
+                <h1 class="text-dark1 text-[80px] leading-[100px] font-extrabold">It's good 
+                    tea time at The Tea House</h1>
+                <p class="text-dark3 text-lg font-medium max-w-lg leading-[30px]">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button class="bg-gradient-to-r flex items-center p-5 from-gradient-start to-gradient-end text-white rounded-xl font-bold">
+                    <span class="mr-2">Explore More</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M4.5 19.7788L19.5 4.77881M19.5 4.77881H8.25M19.5 4.77881V16.0288" stroke="white"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </button>
+            </div>
+            <div class="flex-1 relative">
+                <img src="./images/banner.png" alt="Banner">
+                <div class="rounded-xl shadow-lg max-w-[255px] bg-white flex py-[19px] px-[27px] gap-3 absolute bottom-4 left-10">
+                    <div>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="46" viewBox="0 0 48 46" fill="none">
+                            <path
+                                d="M42.4416 13.778L29.9033 12.6152L24.9228 1.04987C24.574 0.240051 23.4259 0.240051 23.0772 1.04987L18.0966 12.6151L5.5584 13.778C4.68043 13.8594 4.32568 14.9514 4.98802 15.5333L14.4482 23.8439L11.6796 36.1279C11.4858 36.988 12.4147 37.6629 13.1728 37.2128L24 30.7838L34.8272 37.2128C35.5854 37.663 36.5141 36.988 36.3204 36.1279L33.5517 23.8439L43.012 15.5333C43.6743 14.9514 43.3195 13.8594 42.4416 13.778Z"
+                                fill="#FFDC64" />
+                            <path
+                                d="M11.1823 0.651717C11.8215 1.53953 13.6256 5.35235 14.6571 7.57442C14.8193 7.92373 14.381 8.23929 14.1011 7.97463C12.3211 6.29163 9.2775 3.37113 8.63831 2.48322C8.13253 1.78075 8.292 0.801249 8.99456 0.295467C9.69703 -0.210315 10.6765 -0.0507523 11.1823 0.651717Z"
+                                fill="#FFF082" />
+                            <path
+                                d="M36.8177 0.651717C36.1785 1.53953 34.3744 5.35235 33.343 7.57442C33.1808 7.92373 33.6191 8.23929 33.8989 7.97463C35.6789 6.29163 38.7224 3.37103 39.3617 2.48322C39.8675 1.78075 39.708 0.801249 39.0055 0.295467C38.303 -0.210315 37.3235 -0.0507523 36.8177 0.651717Z"
+                                fill="#FFF082" />
+                            <path
+                                d="M46.9183 26.6867C45.8782 26.3475 41.6974 25.7871 39.2671 25.4796C38.8851 25.4313 38.7177 25.9447 39.0547 26.1309C41.199 27.3155 44.9062 29.3277 45.9463 29.6669C46.7692 29.9353 47.6539 29.4858 47.9223 28.6627C48.1907 27.8397 47.7412 26.9551 46.9183 26.6867Z"
+                                fill="#FFF082" />
+                            <path
+                                d="M1.08176 26.6867C2.12182 26.3475 6.30261 25.7871 8.73289 25.4796C9.11492 25.4313 9.28236 25.9447 8.94533 26.1309C6.80098 27.3155 3.09382 29.3277 2.05376 29.6669C1.23082 29.9353 0.346098 29.4858 0.0776916 28.6627C-0.190715 27.8397 0.258817 26.9551 1.08176 26.6867Z"
+                                fill="#FFF082" />
+                            <path
+                                d="M22.4807 44.3756C22.4807 43.2816 23.2443 39.1332 23.7055 36.7272C23.778 36.3491 24.3181 36.3491 24.3906 36.7272C24.8518 39.1332 25.6154 43.2816 25.6154 44.3756C25.6154 45.2412 24.9137 45.9429 24.0481 45.9429C23.1824 45.943 22.4807 45.2412 22.4807 44.3756Z"
+                                fill="#FFF082" />
+                            <path
+                                d="M26.7338 5.2555L24.9227 1.04987C24.5739 0.240051 23.4258 0.240051 23.0771 1.04987L18.0965 12.6151L5.5584 13.778C4.68043 13.8594 4.32568 14.9514 4.98802 15.5333L14.4482 23.8439L11.6796 36.1279C11.4858 36.988 12.4147 37.6629 13.1728 37.2128L14.6138 36.3571C16.9762 21.0646 23.6177 9.83875 26.7338 5.2555Z"
+                                fill="#FFC850" />
+                        </svg>
+                    </div>
+                    <div>
+                        <h2 class="font-extrabold text-3xl text-dark1">5.00</h2>
+                        <p class="text-dark3 font-sm text-[16px]">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer class="text-red shadow"></footer>
 </body>
 
 </html>
