featured section done with responsive

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                        dark3: '#777777',
                        'gradient-start': '#FF8938',
                        'gradient-end': '#f00',
+                       'gray-gradient-start': '#F4F4F4',
+                       'gray-gradient-end': "rgba(244, 244, 244, 0.00)",
                     }
                 }
             }
@@ -88,7 +90,37 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <!-- Featured Section -->
+        <div class="mb-32 max-w-[1140px] mx-auto">
+            <div class="text-center mb-[50px]">
+                <h2 class="mb-5 text-dark1 font-extrabold text-5xl">Our Featured Products</h2>
+                <p class="text-dark3 text-[16px] font-medium max-w-[901px] leading-7 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+                <div class="bg-gradient-to-b from-gray-gradient-start to-gray-gradient-end rounded-[10px] text-center p-[30px]">
+                    <img src="./images/tea-1.png" alt="" class="mb-7 flex justify-center mx-auto">
+                    <h3 class="text-[25px] font-extrabold text-dark1 mb-[10px]">Milk Tea</h3>
+                    <p class="text-dark3 text-[16px] font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-gray-gradient-start to-gray-gradient-end rounded-[10px] text-center p-[30px]">
+                    <img src="./images/tea-2.png" alt="" class="mb-7 flex justify-center mx-auto">
+                    <h3 class="text-[25px] font-extrabold text-dark1 mb-[10px]">Black Tea</h3>
+                    <p class="text-dark3 text-[16px] font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-gray-gradient-start to-gray-gradient-end rounded-[10px] text-center p-[30px]">
+                    <img src="./images/tea-3.png" alt="" class="mb-7 flex justify-center mx-auto">
+                    <h3 class="text-[25px] font-extrabold text-dark1 mb-[10px]">Lemon Tea</h3>
+                    <p class="text-dark3 text-[16px] font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="bg-gradient-to-b from-gray-gradient-start to-gray-gradient-end rounded-[10px] text-center p-[30px]">
+                    <img src="./images/tea-4.png" alt="" class="mb-7 flex justify-center mx-auto">
+                    <h3 class="text-[25px] font-extrabold text-dark1 mb-[10px]">Green Tea</h3>
+                    <p class="text-dark3 text-[16px] font-semibold">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer class="text-red shadow"></footer>
 </body>
 
